Fix headers color for readability

--- a/_sass/git-wiki-style.scss
+++ b/_sass/git-wiki-style.scss
@@ -40,14 +40,14 @@ h1 {
 }
 
 h2 {
-  color: #15162F;
+  color: #292C52;
 }
 
 h3,
 h4,
 h5,
 h6 {
-  color: #828F96;
+  color: #575f65;
 }
 
 a {
